--- a/vault-template/.obsidian/appearance.json
+++ b/vault-template/.obsidian/appearance.json
@@ -16,7 +16,7 @@
     "CyanVoxel's General Tweaks",
     "Daily Note Themes"
   ],
-  "translucency": false,
+  "translucency": true,
   "theme": "obsidian",
   "baseFontSize": 17
 }
